[gd_scene load_steps=2 format=3 uid="uid://b6x3srvkkdlox"]

[ext_resource type="Script" uid="uid://cavrwn7jxllnm" path="res://scripts/ScoreScreen.gd" id="1"]

[node name="ScoreScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="Panel" type="Panel" parent="CanvasLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Final Civic Score: 0"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 24

[node name="LevelLabel" type="Label" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Civic Level: Needs Improvement"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_font_sizes/font_size = 20
modulate = Color(1, 0.8, 0, 1)

[node name="RestartButton" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Game"
theme_override_font_sizes/font_size = 16
